--- a/manifest.yml
+++ b/manifest.yml
@@ -4,7 +4,7 @@ applications:
   memory: 512MB
   instances: 1
   path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
-  buildpack: java_buildpack
+  buildpack: java_buildpack_offline
   services: []
   env:
     SPRING_PROFILES_ACTIVE: cloud
