--- a/manifest.yml
+++ b/manifest.yml
@@ -6,5 +6,6 @@ applications:
   path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
   buildpack: java_buildpack_offline
   services: []
+  random-route: true
   env:
     SPRING_PROFILES_ACTIVE: cloud
