--- a/manifest.yml
+++ b/manifest.yml
@@ -1,10 +1,11 @@
 ---
 applications:
-- name: attendees-${random-word}
+- name: attendees
+  random-route: true
   memory: 512MB
   instances: 1
   path: target/pcf-ers-demo1-0.0.1-SNAPSHOT.jar
-  buildpack: java_buildpack_offline
+  buildpack: java_buildpack
   services: []
   env:
     SPRING_PROFILES_ACTIVE: cloud
